--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -700,13 +700,15 @@ h6 {
 
 
 .gallery-item p {
-  display: none;
+  display: flex;
   position: absolute;
-  top: 30%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.8);
+  padding: 2px;
+  padding-left: 200px;
+  padding-right: 200px;
+  background-color: rgba(0, 0, 0, 0.6);
   color: #FFFFFF;
   text-align: center;
   font-weight: bold;
@@ -778,6 +780,10 @@ h6 {
 .glightbox-clean .gslide-title {
   color: rgba(255, 255, 255, 0.8);
   margin: 0;
+}
+
+.gallery-click {
+  font-weight: bold;
 }
 
 /*--------------------------------------------------------------
@@ -949,6 +955,8 @@ h6 {
   margin: 0 0 15px 0 0 0;
   padding: 0;
 }
+
+
 
 /*--------------------------------------------------------------
 # Services Section
@@ -1256,6 +1264,11 @@ h6 {
   text-align: center;
 }
 
+.text-center {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1280,4 +1293,8 @@ h6 {
 
 .footer .credits a {
   color: var(--color-primary);
+}
+
+.py-3 {
+  padding-top: 0px !important;
 }
